--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
 * text=auto
 
-shell/webview.h linguist-documentation
-web_external/installer/shell/webview.h linguist-documentation
+frontent_react/public/*.html linguist-documentation
